# mauby-engine

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: main.c  main.h
src/demos/: demo.c
src/gui/: gui.cpp  gui.h
